--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
           <button data-modal-open type="button" class="hero-section__button">Заказать услугу</button>
         </div>
       </section>
-
-
-      
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <div class="modal__background">
@@ -239,9 +236,9 @@
           <ul class="invisible-list team">
             <li class="team__member-card">
               <img
-                src="images/member1.jpg"
+                srcset="./images/mobile-member1-1x.jpg 450w, ./images/mobile-member1-2x.jpg 900w"
+                src="./images/mobile-member1-1x.jpg"
                 alt="Игорь Демьяненко"
-                width="270"
                 class="team__mobile-member-image"
               />
               <div class="team__card-content">
@@ -280,7 +277,7 @@
               </div>
             </li>
             <li class="team__member-card">
-              <img src="images/member2.jpg" alt="Ольга Репина" width="270" class="team__mobile-member-image"/>
+              <img srcset="./images/mobile-member2-1x.jpg 450w, ./images/mobile-member2-2x.jpg 900w" src="./images/mobile-member2-1x.jpg" alt="Ольга Репина" class="team__mobile-member-image"/>
               <div class="team__card-content">
                 <h3 class="team__member-name">Ольга Репина</h3>
                 <p class="team__member-position">Frontend Developer</p>
@@ -317,7 +314,8 @@
               </div>
             </li>
             <li class="team__member-card">
-              <img src="images/member3.jpg" alt="Николай Тарасов" width="270" class="team__mobile-member-image"/>
+              <img 
+              srcset="./images/mobile-member3-1x.jpg 450w, ./images/mobile-member3-2x.jpg 900w" src="./images/mobile-member3-1x.jpg" alt="Николай Тарасов" class="team__mobile-member-image"/>
               <div class="team__card-content">
                 <h3 class="team__member-name">Николай Тарасов</h3>
                 <p class="team__member-position">Marketing</p>
@@ -354,7 +352,7 @@
               </div>
             </li>
             <li class="team__member-card">
-              <img src="images/member4.jpg" alt="Михаил Ермаков" width="270" class="team__mobile-member-image"/>
+              <img src="images/member4.jpg" srcset="./images/mobile-member4-1x.jpg 450w, ./images/mobile-member4-2x.jpg 900w" src="./images/mobile-member4-1x.jpg" alt="Михаил Ермаков" class="team__mobile-member-image"/>
               <div class="team__card-content">
                 <h3 class="team__member-name">Михаил Ермаков</h3>
                 <p class="team__member-position">UI Designer</p>
