--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
               <a href="" class="navigation__link--inactive">Контакты</a>
             </li>
           </ul>
-          <svg class="navigation__menu--mobile">
-            <use href="./images/symbol-defs.svg#mobile-menu-open"></use>
-          </svg>
+          <button type="button" class="navigation__menu-button is-open" aria-label="Переключатель мобильного меню" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+            <svg class="navigation__menu--icon">
+              <use class="navigation__menu--open" href="./images/symbol-defs.svg#mobile-menu-close"></use>
+              <use class="navigation__menu--close" href="./images/symbol-defs.svg#mobile-menu-open"></use>
+            </svg>
+          </button>
+
+          <div class="navigation__menu--mobile" id="menu-container" data-menu>
+            Content Menu
+          </div>
+
         </nav>
         
-        <!-- <svg class="navigation__menu--mobile">
-          <use href="./images/symbol-defs.svg#mobile-menu-close"></use>
-        </svg> -->
         <ul class="contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="contacts__link">
@@ -515,6 +520,7 @@
         </form>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
