--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
 
             <ul class="navigation__list">
               <li>
-                <a href="./index.html" class="navigation__link--active">Студия</a>
+                <a href="./index.html" class="navigation__link--inactive">Студия</a>
               </li>
               <li>
-                <a href="./portfolio.html" class="navigation__link--inactive">Портфолио</a>
+                <a href="./portfolio.html" class="navigation__link--active">Портфолио</a>
               </li>
               <li>
                 <a href="" class="navigation__link--inactive">Контакты</a>
@@ -98,9 +98,12 @@
                 <div class="projects__thumb">
                   <img srcset="./images/project1-m-1x.jpg 450w, ./images/project1-m-2x.jpg 900w" src="./images/project1-m-1x.jpg" alt="Project Технокряк" class="team__mobile-member-image"/>
                   <p class="projects__description-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
+                    <span>
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю получить
+                      исчерпывающие сведения о компании или частном лице.
+
+                    </span>
                   </p>
                 </div>
                 <div class="projects__description-block">
@@ -315,6 +318,6 @@
         </form>
       </div>
     </footer>
-  <script src="./js/menu.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
