--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project1-m-1x.jpg 450w, ./images/project1-m-2x.jpg 900w" src="./images/project1-m-1x.jpg" alt="Project Технокряк" class="team__mobile-member-image"/>
+                  <img srcset="./images/project1-m-1x.jpg 450w, ./images/project1-m-2x.jpg 900w" src="./images/project1-m-1x.jpg" alt="Project Технокряк" class="project__image"/>
                   <p class="projects__description-text">
                     <span>
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -115,7 +115,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project2-m-1x.jpg 450w, ./images/project2-m-2x.jpg 900w" src="./images/project2-m-1x.jpg" alt="Project New Orlean vs Golden Star" class="team__mobile-member-image"/>
+                  <img srcset="./images/project2-m-1x.jpg 450w, ./images/project2-m-2x.jpg 900w" src="./images/project2-m-1x.jpg" alt="Project New Orlean vs Golden Star" class="project__image"/>
                   <p class="projects__description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -131,7 +131,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project3-m-1x.jpg 450w, ./images/project3-m-2x.jpg 900w" src="./images/project3-m-1x.jpg" alt="Project Ресторан Seafood" class="team__mobile-member-image"/>
+                  <img srcset="./images/project3-m-1x.jpg 450w, ./images/project3-m-2x.jpg 900w" src="./images/project3-m-1x.jpg" alt="Project Ресторан Seafood" class="project__image"/>
                   <p class="projects__description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -147,7 +147,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project4-m-1x.jpg 450w, ./images/project4-m-2x.jpg 900w" src="./images/project4-m-1x.jpg" alt="Project Prime" class="team__mobile-member-image"/>
+                  <img srcset="./images/project4-m-1x.jpg 450w, ./images/project4-m-2x.jpg 900w" src="./images/project4-m-1x.jpg" alt="Project Prime" class="project__image"/>
                   <p class="projects__description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -163,7 +163,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project5-m-1x.jpg 450w, ./images/project5-m-2x.jpg 900w" src="./images/project5-m-1x.jpg" alt="Project Boxes" class="team__mobile-member-image"/>
+                  <img srcset="./images/project5-m-1x.jpg 450w, ./images/project5-m-2x.jpg 900w" src="./images/project5-m-1x.jpg" alt="Project Boxes" class="project__image"/>
                   <p class="projects__description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -179,7 +179,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project6-m-1x.jpg 450w, ./images/project6-m-2x.jpg 900w" src="./images/project6-m-1x.jpg" alt="Project Inspiration has no Borders" class="team__mobile-member-image"/>
+                  <img srcset="./images/project6-m-1x.jpg 450w, ./images/project6-m-2x.jpg 900w" src="./images/project6-m-1x.jpg" alt="Project Inspiration has no Borders" class="project__image"/>
                   <p class="projects__description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -195,7 +195,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project7-m-1x.jpg 450w, ./images/project7-m-2x.jpg 900w" src="./images/project7-m-1x.jpg" alt="Project Издание Limited Edition" class="team__mobile-member-image"/>
+                  <img srcset="./images/project7-m-1x.jpg 450w, ./images/project7-m-2x.jpg 900w" src="./images/project7-m-1x.jpg" alt="Project Издание Limited Edition" class="project__image"/>
                   <p class="projects__description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -211,7 +211,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project8-m-1x.jpg 450w, ./images/project8-m-2x.jpg 900w" src="./images/project8-m-1x.jpg" alt="Project Проект LAB" class="team__mobile-member-image"/>
+                  <img srcset="./images/project8-m-1x.jpg 450w, ./images/project8-m-2x.jpg 900w" src="./images/project8-m-1x.jpg" alt="Project Проект LAB" class="project__image"/>
                   <p class="projects__description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -227,7 +227,7 @@
             <li class="projects__card">
               <div class="projects__container">
                 <div class="projects__thumb">
-                  <img srcset="./images/project9-m-1x.jpg 450w, ./images/project9-m-2x.jpg 900w" src="./images/project9-m-1x.jpg" alt="Project Growing Business" class="team__mobile-member-image"/>
+                  <img srcset="./images/project9-m-1x.jpg 450w, ./images/project9-m-2x.jpg 900w" src="./images/project9-m-1x.jpg" alt="Project Growing Business" class="project__image"/>
                   <p class="projects__description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
