--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <div class="container header__container">
       <nav class="navigation">
         <a href="/index.html" class="logo"><span class="logo__web">Web</span>Studio</a>
-
         <button type="button" class="navigation__menu-button is-open" aria-label="Переключатель мобильного меню"
           aria-expanded="false" aria-controls="menu-container" data-menu-button>
           <svg class="navigation__menu--icon">
@@ -27,53 +26,49 @@
             <use class="navigation__menu--close" href="./images/symbol-defs.svg#mobile-menu-open"></use>
           </svg>
         </button>
-
         <div class="navigation__menu--mobile" id="menu-container" data-menu>
-
-
           </button>
-
-
-          <ul class="navigation__list">
-            <li>
-              <a href="./index.html" class="navigation__link--active">Студия</a>
-            </li>
-            <li>
-              <a href="./portfolio.html" class="navigation__link--inactive">Портфолио</a>
-            </li>
-            <li>
-              <a href="" class="navigation__link--inactive">Контакты</a>
-            </li>
-          </ul>
-          <ul class="contacts">
-            <li>
-              <a href="mailto:info@devstudio.com" class="contacts__link">
-                <svg class="contacts__icon contacts__icon--mailing">
-                  <use href="./images/symbol-defs.svg#contact1"></use>
-                </svg>
-                <div class="contacts__e-mail">info@devstudio.com</div>
-              </a>
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="contacts__link">
-                <svg class="contacts__icon contacts__icon--calling">
-                  <use href="./images/symbol-defs.svg#contact2"></use>
-                </svg>
-                <div class="contacts__phone">+38 096 111 11 11</div>
-              </a>
-            </li>
-          </ul>
-          <table class="contacts__social-networks">
-            <tr>
-              <td><a href="">Instagram</a></td>
-              <td><a href="">Twitter</a></td>
-              <td><a href="">Facebook</a></td>
-              <td><a href="">LinkedIn</a></td>
-            </tr>
-          </table>
+          <div class="navigation__menu--centered">
+            <ul class="navigation__list">
+              <li>
+                <a href="./index.html" class="navigation__link--active">Студия</a>
+              </li>
+              <li>
+                <a href="./portfolio.html" class="navigation__link--inactive">Портфолио</a>
+              </li>
+              <li>
+                <a href="" class="navigation__link--inactive">Контакты</a>
+              </li>
+            </ul>
+            <ul class="contacts">
+              <li>
+                <a href="mailto:info@devstudio.com" class="contacts__link">
+                  <svg class="contacts__icon contacts__icon--mailing">
+                    <use href="./images/symbol-defs.svg#contact1"></use>
+                  </svg>
+                  <div class="contacts__e-mail">info@devstudio.com</div>
+                </a>
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="contacts__link">
+                  <svg class="contacts__icon contacts__icon--calling">
+                    <use href="./images/symbol-defs.svg#contact2"></use>
+                  </svg>
+                  <div class="contacts__phone">+38 096 111 11 11</div>
+                </a>
+              </li>
+            </ul>
+            <table class="contacts__social-networks">
+              <tr>
+                <td><a href="">Instagram</a></td>
+                <td><a href="">Twitter</a></td>
+                <td><a href="">Facebook</a></td>
+                <td><a href="">LinkedIn</a></td>
+              </tr>
+            </table>
+          </div>
         </div>
       </nav>
-
     </div>
   </header>
   <main>
@@ -230,11 +225,15 @@
         <h2 class="section-header">Наша команда</h2>
         <ul class="invisible-list team">
           <li class="team__member-card">
-            <img
-              srcset="./images/mobile-member1-1x.jpg 450w, ./images/mobile-member1-2x.jpg 900w, ./images/tablet-member1-1x.jpg 354w, ./images/tablet-member1-2x.jpg 708w, ./images/desktop-member1-1x.jpg 270w, images/desktop-member1-2x.jpg 540w"
-              src="./images/mobile-member1-1x.jpg" alt="Игорь Демьяненко"
-              sizes="(min-width: 1200px) 22vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-              class="team__mobile-member-image" />
+            <picture class="team__mobile-member-image">
+              <source srcset="./images/desktop-member1-1x.jpg 1x, ./images/desktop-member1-2x.jpg 2x" type="image/jpg"
+                media="(min-width: 1200px)">
+              <source srcset="./images/tablet-member1-1x.jpg 1x, ./images/tablet-member1-2x.jpg 2x" type="image/jpg"
+                media="(min-width: 768px)">
+              <source srcset="./images/mobile-member1-1x.jpg 1x, ./images/mobile-member1-2x.jpg 2x" type="image/jpg"
+                media="(max-width: 767px)">
+              <img src="./images/mobile-member1-1x.jpg">
+            </picture>
             <div class="team__card-content">
               <h3 class="team__member-name">Игорь Демьяненко</h3>
               <p class="team__member-position">Product Designer</p>
@@ -271,11 +270,16 @@
             </div>
           </li>
           <li class="team__member-card">
-            <img
-              srcset="./images/mobile-member2-1x.jpg 450w, ./images/mobile-member2-2x.jpg 900w, ./images/tablet-member2-1x.jpg 354w, ./images/tablet-member2-2x.jpg 708w, ./images/desktop-member2-1x.jpg 270w, images/desktop-member2-2x.jpg 540w"
-              src="./images/mobile-member2-1x.jpg" alt="Ольга Репина"
-              sizes="(min-width: 1200px) 22vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-              class="team__mobile-member-image" />
+
+            <picture class="team__mobile-member-image">
+              <source srcset="./images/desktop-member2-1x.jpg 1x, ./images/desktop-member2-2x.jpg 2x" type="image/jpg"
+                media="(min-width: 1200px)">
+              <source srcset="./images/tablet-member2-1x.jpg 1x, ./images/tablet-member2-2x.jpg 2x" type="image/jpg"
+                media="(min-width: 768px)">
+              <source srcset="./images/mobile-member2-1x.jpg 1x, ./images/mobile-member2-2x.jpg 2x" type="image/jpg"
+                media="(max-width: 767px)">
+              <img src="./images/mobile-member2-1x.jpg">
+            </picture>
             <div class="team__card-content">
               <h3 class="team__member-name">Ольга Репина</h3>
               <p class="team__member-position">Frontend Developer</p>
@@ -312,11 +316,15 @@
             </div>
           </li>
           <li class="team__member-card">
-            <img
-              srcset="./images/mobile-member3-1x.jpg 450w, ./images/mobile-member3-2x.jpg 900w, ./images/tablet-member3-1x.jpg 354w, ./images/tablet-member3-2x.jpg 708w, ./images/desktop-member3-1x.jpg 270w, images/desktop-member3-2x.jpg 540w"
-              src="./images/mobile-member3-1x.jpg" alt="Николай Тарасов"
-              sizes="(min-width: 1200px) 22vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-              class="team__mobile-member-image" />
+            <picture class="team__mobile-member-image">
+              <source srcset="./images/desktop-member3-1x.jpg 1x, ./images/desktop-member3-2x.jpg 2x" type="image/jpg"
+                media="(min-width: 1200px)">
+              <source srcset="./images/tablet-member3-1x.jpg 1x, ./images/tablet-member3-2x.jpg 2x" type="image/jpg"
+                media="(min-width: 768px)">
+              <source srcset="./images/mobile-member3-1x.jpg 1x, ./images/mobile-member3-2x.jpg 2x" type="image/jpg"
+                media="(max-width: 767px)">
+              <img src="./images/mobile-member3-1x.jpg">
+            </picture>
             <div class="team__card-content">
               <h3 class="team__member-name">Николай Тарасов</h3>
               <p class="team__member-position">Marketing</p>
@@ -353,11 +361,15 @@
             </div>
           </li>
           <li class="team__member-card">
-            <img
-              srcset="./images/mobile-member4-1x.jpg 450w, ./images/mobile-member4-2x.jpg 900w, ./images/tablet-member4-1x.jpg 354w, ./images/tablet-member4-2x.jpg 708w, ./images/desktop-member4-1x.jpg 270w, images/desktop-member4-2x.jpg 540w"
-              src="./images/mobile-member4-1x.jpg" alt="Михаил Ермаков"
-              sizes="(min-width: 1200px) 22vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-              class="team__mobile-member-image" />
+            <picture class="team__mobile-member-image">
+              <source srcset="./images/desktop-member4-1x.jpg 1x, ./images/desktop-member4-2x.jpg 2x" type="image/jpg"
+                media="(min-width: 1200px)">
+              <source srcset="./images/tablet-member4-1x.jpg 1x, ./images/tablet-member4-2x.jpg 2x" type="image/jpg"
+                media="(min-width: 768px)">
+              <source srcset="./images/mobile-member4-1x.jpg 1x, ./images/mobile-member4-2x.jpg 2x" type="image/jpg"
+                media="(max-width: 767px)">
+              <img src="./images/mobile-member4-1x.jpg">
+            </picture>
             <div class="team__card-content">
               <h3 class="team__member-name">Михаил Ермаков</h3>
               <p class="team__member-position">UI Designer</p>
