--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,6 @@
     <div class="container header__container">
       <nav class="navigation">
         <a href="/index.html" class="logo"><span class="logo__web">Web</span>Studio</a>
-
         <button type="button" class="navigation__menu-button is-open" aria-label="Переключатель мобильного меню"
           aria-expanded="false" aria-controls="menu-container" data-menu-button>
           <svg class="navigation__menu--icon">
@@ -27,50 +26,47 @@
             <use class="navigation__menu--close" href="./images/symbol-defs.svg#mobile-menu-open"></use>
           </svg>
         </button>
-
         <div class="navigation__menu--mobile" id="menu-container" data-menu>
-
-
           </button>
-
-
-          <ul class="navigation__list">
-            <li>
-              <a href="./index.html" class="navigation__link--inactive">Студия</a>
-            </li>
-            <li>
-              <a href="./portfolio.html" class="navigation__link--active">Портфолио</a>
-            </li>
-            <li>
-              <a href="" class="navigation__link--inactive">Контакты</a>
-            </li>
-          </ul>
-          <ul class="contacts">
-            <li>
-              <a href="mailto:info@devstudio.com" class="contacts__link">
-                <svg class="contacts__icon contacts__icon--mailing">
-                  <use href="./images/symbol-defs.svg#contact1"></use>
-                </svg>
-                <div class="contacts__e-mail">info@devstudio.com</div>
-              </a>
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="contacts__link">
-                <svg class="contacts__icon contacts__icon--calling">
-                  <use href="./images/symbol-defs.svg#contact2"></use>
-                </svg>
-                <div class="contacts__phone">+38 096 111 11 11</div>
-              </a>
-            </li>
-          </ul>
-          <table class="contacts__social-networks">
-            <tr>
-              <td><a href="">Instagram</a></td>
-              <td><a href="">Twitter</a></td>
-              <td><a href="">Facebook</a></td>
-              <td><a href="">LinkedIn</a></td>
-            </tr>
-          </table>
+          <div class="navigation__menu--centered">
+            <ul class="navigation__list">
+              <li>
+                <a href="./index.html" class="navigation__link--inactive">Студия</a>
+              </li>
+              <li>
+                <a href="./portfolio.html" class="navigation__link--active">Портфолио</a>
+              </li>
+              <li>
+                <a href="" class="navigation__link--inactive">Контакты</a>
+              </li>
+            </ul>
+            <ul class="contacts">
+              <li>
+                <a href="mailto:info@devstudio.com" class="contacts__link">
+                  <svg class="contacts__icon contacts__icon--mailing">
+                    <use href="./images/symbol-defs.svg#contact1"></use>
+                  </svg>
+                  <div class="contacts__e-mail">info@devstudio.com</div>
+                </a>
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="contacts__link">
+                  <svg class="contacts__icon contacts__icon--calling">
+                    <use href="./images/symbol-defs.svg#contact2"></use>
+                  </svg>
+                  <div class="contacts__phone">+38 096 111 11 11</div>
+                </a>
+              </li>
+            </ul>
+            <table class="contacts__social-networks">
+              <tr>
+                <td><a href="">Instagram</a></td>
+                <td><a href="">Twitter</a></td>
+                <td><a href="">Facebook</a></td>
+                <td><a href="">LinkedIn</a></td>
+              </tr>
+            </table>
+          </div>
         </div>
       </nav>
     </div>
@@ -102,14 +98,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 0  -->
-
-                <img srcset="./images/mobile-project0-1x.jpg 450w, ./images/mobile-project0-2x.jpg 900w, 
-                  ./images/tablet-project0-1x.jpg 354w, ./images/tablet-project0-2x.jpg 708w, 
-                  ./images/desktop-project0-1x.jpg 370w, ./images/desktop-project0-2x.jpg 740w"
-                  src="./images/mobile-project0-1x.jpg" alt="Project Технокряк"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
-
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project0-1x.jpg 1x, ./images/desktop-project0-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project0-1x.jpg 1x, ./images/tablet-project0-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project0-1x.jpg 1x, ./images/mobile-project0-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project0-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   <span>
                     Ресурс предлагает комплексные предложения с разным уровнем
@@ -129,13 +126,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 1  -->
-                <img srcset="./images/mobile-project1-1x.jpg 450w, ./images/mobile-project1-2x.jpg 900w, 
-                                  ./images/tablet-project1-1x.jpg 354w, ./images/tablet-project1-2x.jpg 708w, 
-                                  ./images/desktop-project1-1x.jpg 370w, ./images/desktop-project1-2x.jpg 740w"
-                  src="./images/mobile-project1-1x.jpg" alt="Project New Orlean vs Golden Star"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
-
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project1-1x.jpg 1x, ./images/desktop-project1-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project1-1x.jpg 1x, ./images/tablet-project1-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project1-1x.jpg 1x, ./images/mobile-project1-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project1-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
@@ -152,15 +151,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 2  -->
-
-                <img
-                  srcset="./images/mobile-project2-1x.jpg 450w, ./images/mobile-project2-2x.jpg 900w, 
-                                                  ./images/tablet-project2-1x.jpg 354w, ./images/tablet-project2-2x.jpg 708w, 
-                                                  ./images/desktop-project2-1x.jpg 370w, ./images/desktop-project2-2x.jpg 740w"
-                  src="./images/mobile-project2-1x.jpg" alt="Project Ресторан Seafood"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
-
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project2-1x.jpg 1x, ./images/desktop-project2-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project2-1x.jpg 1x, ./images/tablet-project2-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project2-1x.jpg 1x, ./images/mobile-project2-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project2-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
@@ -177,15 +176,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 3  -->
-                <img
-                  srcset="./images/mobile-project3-1x.jpg 450w, ./images/mobile-project3-2x.jpg 900w, 
-                                                                  ./images/tablet-project3-1x.jpg 354w, ./images/tablet-project3-2x.jpg 708w, 
-                                                                  ./images/desktop-project3-1x.jpg 370w, ./images/desktop-project3-2x.jpg 740w"
-                  src="./images/mobile-project3-1x.jpg" alt="Project Prime"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
-
-
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project3-1x.jpg 1x, ./images/desktop-project3-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project3-1x.jpg 1x, ./images/tablet-project3-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project3-1x.jpg 1x, ./images/mobile-project3-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project3-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
@@ -202,14 +201,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 4  -->
-                <img srcset="./images/mobile-project4-1x.jpg 450w, ./images/mobile-project4-2x.jpg 900w, 
-                ./images/tablet-project4-1x.jpg 354w, ./images/tablet-project4-2x.jpg 708w, 
-                ./images/desktop-project4-1x.jpg 370w, ./images/desktop-project4-2x.jpg 740w"
-                  src="./images/mobile-project4-1x.jpg" alt="Project Boxes"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
-
-
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project4-1x.jpg 1x, ./images/desktop-project4-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project4-1x.jpg 1x, ./images/tablet-project4-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project4-1x.jpg 1x, ./images/mobile-project4-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project4-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
@@ -226,15 +226,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 5  -->
-
-                <img srcset="./images/mobile-project5-1x.jpg 450w, ./images/mobile-project5-2x.jpg 900w, 
-                                ./images/tablet-project5-1x.jpg 354w, ./images/tablet-project5-2x.jpg 708w, 
-                                ./images/desktop-project5-1x.jpg 370w, ./images/desktop-project5-2x.jpg 740w"
-                  src="./images/mobile-project5-1x.jpg" alt="Project Inspiration has no Borders"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
-
-
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project5-1x.jpg 1x, ./images/desktop-project5-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project5-1x.jpg 1x, ./images/tablet-project5-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project5-1x.jpg 1x, ./images/mobile-project5-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project5-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
@@ -251,15 +251,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 6  -->
-                <img
-                  srcset="./images/mobile-project6-1x.jpg 450w, ./images/mobile-project6-2x.jpg 900w, 
-                                                ./images/tablet-project6-1x.jpg 354w, ./images/tablet-project6-2x.jpg 708w, 
-                                                ./images/desktop-project6-1x.jpg 370w, ./images/desktop-project6-2x.jpg 740w"
-                  src="./images/mobile-project6-1x.jpg" alt="Project Издание Limited Edition"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
-
-
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project6-1x.jpg 1x, ./images/desktop-project6-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project6-1x.jpg 1x, ./images/tablet-project6-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project6-1x.jpg 1x, ./images/mobile-project6-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project6-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
@@ -276,15 +276,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 7  -->
-                <img
-                  srcset="./images/mobile-project7-1x.jpg 450w, ./images/mobile-project7-2x.jpg 900w, 
-                                                                ./images/tablet-project7-1x.jpg 354w, ./images/tablet-project7-2x.jpg 708w, 
-                                                                ./images/desktop-project7-1x.jpg 370w, ./images/desktop-project7-2x.jpg 740w"
-                  src="./images/mobile-project7-1x.jpg" alt="Project Проект LAB"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
-
-
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project7-1x.jpg 1x, ./images/desktop-project7-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project7-1x.jpg 1x, ./images/tablet-project7-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project7-1x.jpg 1x, ./images/mobile-project7-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project7-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
@@ -301,14 +301,15 @@
             <div class="projects__container">
               <div class="projects__thumb">
                 <!-- project 8  -->
-
-                <img
-                  srcset="./images/mobile-project8-1x.jpg 450w, ./images/mobile-project8-2x.jpg 900w, 
-                                                                                ./images/tablet-project8-1x.jpg 354w, ./images/tablet-project8-2x.jpg 708w, 
-                                                                                ./images/desktop-project8-1x.jpg 370w, ./images/desktop-project8-2x.jpg 740w"
-                  src="./images/mobile-project8-1x.jpg" alt="Project Growing Business"
-                  sizes="(min-width: 1200px) 31vw, (min-width: 768px) 46vw, (min-width: 480px) 93vw, 100vw"
-                  class="project__image" />
+                <picture class="project__image">
+                  <source srcset="./images/desktop-project8-1x.jpg 1x, ./images/desktop-project8-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 1200px)">
+                  <source srcset="./images/tablet-project8-1x.jpg 1x, ./images/tablet-project8-2x.jpg 2x"
+                    type="image/jpg" media="(min-width: 768px)">
+                  <source srcset="./images/mobile-project8-1x.jpg 1x, ./images/mobile-project8-2x.jpg 2x"
+                    type="image/jpg" media="(max-width: 767px)">
+                  <img src="./images/mobile-project8-1x.jpg">
+                </picture>
                 <p class="projects__description-text">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
